<resources>
    <string name="app_name">Fastgo</string>
    <string name="main_home">国际转运</string>
    <string name="main_package">本地直邮</string>
    <string name="main_service">服务</string>
    <string name="main_message">海淘留言板</string>
    <string name="main_my">我</string>
    <string name="add_card_title">请绑定信用卡</string>
    <string name="add_card_prompt">请绑定持卡人本人的信用卡</string>
    <string name="add_card_name">持卡人</string>
    <string name="add_card_phone">手机号</string>
    <string name="add_card_code">验证码</string>
    <string name="add_card_card">卡号</string>
    <string name="add_card_cvv2">CVV2码</string>
    <string name="add_card_enter">请输入</string>
    <string name="add_card_code_get">获取验证码</string>
    <string name="add_card_enter_code">请输入验证码</string>
    <string name="card_title">请选择信用卡</string>
    <string name="add_card_sure">立即绑定</string>
    <string name="add_card_choose_address">请选择国家</string>
    <string name="balance_detail">明细</string>
    <string name="balance_title">我的余额</string>
    <string name="balance_residue">剩余余额</string>
    <string name="balance_recharge">充值</string>
    <string name="balance_withdrawals">提现</string>
    <string name="dialog_success_package">您的包裹已</string>
    <string name="dialog_success_success">成功添加</string>
    <string name="dialog_success_continue">是否继续添加</string>
    <string name="dialog_success_sure">继续添加</string>
    <string name="dialog_success_leave">离开</string>
    <string name="add_address_country">国家</string>
    <string name="add_address_name">请填写收件人姓名</string>
    <string name="add_address_name_enter">收件人姓名</string>
    <string name="add_address_phone">请填写收件人手机号</string>
    <string name="add_address_name_sender">请填写发件人姓名</string>
    <string name="add_address_phone_sender">请填写发件人手机号</string>
    <string name="add_address_city">请选择城市</string>
    <string name="add_address_province">省/州</string>
    <string name="add_address_address">请填写详细地址</string>
    <string name="add_address_code">请填写收件人身份证号</string>
    <string name="add_address_code_sender">请填写发件人身份证号</string>
    <string name="add_address_zip_code">请填写邮编</string>
    <string name="add_address_default">设为默认地址</string>
    <string name="add_address_add">立即添加</string>
    <string name="add_address_choose">请选择</string>
    <string name="address_title">收货地址</string>
    <string name="address_add">添加</string>
    <string name="add_add_address">添加收货地址</string>
    <string name="add_add_address1">地址一</string>
    <string name="add_add_address2">地址二</string>
    <string name="add_add_code">编码</string>
    <string name="add_add_title">请务必用英文填写</string>
    <string name="add_add_detail">包裹详情</string>
    <string name="add_package_two_way">双向转运包裹到国内外</string>
    <string name="add_package_price">只收取物流商规定费用</string>
    <string name="add_package_know">了解费用></string>
    <string name="add_package_enter_fastgo">请填写寄往Fastgo的国内包裹</string>
    <string name="add_package_number">物流单号</string>
    <string name="add_package_shop">物流类型</string>
    <string name="add_package_content">包裹内容</string>
    <string name="add_package_enter_content">请填写包裹内容</string>
    <string name="add_package_enter_number">请手动填写或扫一扫物流单号</string>
    <string name="coupon_title">我的优惠券</string>
    <string name="supplies_name">耗材名称</string>
    <string name="supplies_number">耗材数量</string>
    <string name="consume_name">姓名</string>
    <string name="consume_goods_name">物品名称</string>
    <string name="board_zan">点赞(</string>
    <string name="board_add">留言</string>
    <string name="home_system">系统消息</string>
    <string name="home_transfer_address">中转地址</string>
    <string name="home_have_been_sent">包裹管理</string>
    <string name="home_logistics_query">物流查询</string>
    <string name="home_logistics_result">物流查询结果</string>
    <string name="home_have_been_arrived">包裹打包</string>
    <string name="home_problem">您知道哪些是禁运物品吗?</string>
    <string name="home_add_transport">添加转运包裹</string>
    <string name="home_how_transport">包裹如何转运</string>
    <string name="home_new">最新资讯</string>
    <string name="home_add">ADD TRANSPORT PARCELS</string>
    <string name="home_how">HOW TO TRANSPORT</string>
    <string name="home_latest">LATEST NEWS</string>
    <string name="integral_title">我的积分</string>
    <string name="integral_residue">剩余积分</string>
    <string name="integral_rule">积分规则</string>
    <string name="integral_obtain">获取</string>
    <string name="integral_content">积分是根据规则，由用户消费转换过来的，积分可以用来确定用户等级和折扣。</string>
    <string name="integral_ues">使用</string>
    <string name="logistics_query">立即查询</string>
    <string name="my_title">我的</string>
    <string name="my_balance">余额</string>
    <string name="my_coupon">优惠券</string>
    <string name="my_integral">积分</string>
    <string name="my_feedback">问题反馈</string>
    <string name="my_address">地址管理</string>
    <string name="my_statistics">包裹统计</string>
    <string name="my_safe">安全中心</string>
    <string name="my_about">关于我们</string>
    <string name="my_order">我的运单</string>
    <string name="my_supplies">耗材使用统计</string>
    <string name="my_consume">消费统计</string>
    <string name="my_balance_pay">余额支付</string>
    <string name="statistics_time_choose">时间筛选</string>
    <string name="statistics_rmb">统计：¥</string>
    <string name="statistics_order">运单号</string>
    <string name="statistics_price">费用</string>
    <string name="statistics_time">时间</string>
    <string name="feedback_add">添加问题反馈</string>
    <string name="feedback_pending">待处理...</string>
    <string name="feedback_back">已反馈...</string>
    <string name="feedback_order">运单号：</string>
    <string name="feedback_result">反馈结果：</string>
    <string name="feedback_time">提交时间：</string>
    <string name="feedback_priority">请选择问题优先级</string>
    <string name="feedback_enter_order">请填写运单号</string>
    <string name="feedback_type">请选择问题类型</string>
    <string name="feedback_describe">问题描述：</string>
    <string name="feedback_content">问题备注：</string>
    <string name="feedback_enclosure">请上传附件：</string>
    <string name="feedback_submit">提交</string>
    <string name="order_hint">请输入运单/收件人</string>
    <string name="order_num">转运单号：</string>
    <string name="order_name">收件人：</string>
    <string name="order_editor">编辑</string>
    <string name="order_return">退件</string>
    <string name="order_track">跟踪</string>
    <string name="order_price">费用：¥</string>
    <string name="order_channel">渠&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;道：</string>
    <string name="order_goods">物&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;品：</string>
    <string name="order_freight">运费/税费：</string>
    <string name="order_protection">物品保价/保价费用：</string>
    <string name="order_remarks">运单备注：</string>
    <string name="order_storage">入库时间：</string>
    <string name="order_creat">创建时间：</string>
    <string name="order_payment">付款时间：</string>
    <string name="order_name_space">收&#160;件&#160;人：</string>
    <string name="order_phone">手&#160;机&#160;号：</string>
    <string name="order_address">地&#160;&#160;&#160;&#160;&#160;&#160;址：</string>
    <string name="order_zip_code">邮&#160;&#160;&#160;&#160;&#160;&#160;编：</string>
    <string name="order_goods_message">物品信息</string>
    <string name="order_goods_name">商品名称</string>
    <string name="order_type">类别</string>
    <string name="order_brand">品牌</string>
    <string name="order_format">规格</string>
    <string name="order_number">数量</string>
    <string name="order_unit_price">单价</string>
    <string name="order_total">合计</string>
    <string name="order_weight">包裹总重量：</string>
    <string name="order_images">发货拍照</string>
    <string name="order_remark">备注：</string>
    <string name="pay_name">收货人：</string>
    <string name="pay_address">收货地址：</string>
    <string name="pay_category">类别：</string>
    <string name="pay_weight">重量：</string>
    <string name="pay_all">共计</string>
    <string name="pay_goods_detail">商品详情</string>
    <string name="pay_goods">件商品</string>
    <string name="pay_postage">&#160;&#160;&#160;&#160;邮寄费</string>
    <string name="pay_used">（可用余额</string>
    <string name="pay_rmb">元）</string>
    <string name="pay_alipay">支付宝支付</string>
    <string name="pay_weixin">微信支付</string>
    <string name="pay_paypal">PayPal支付</string>
    <string name="pay_bank">银行卡支付</string>
    <string name="pay_total">总支付</string>
    <string name="pay_balance_enter">&#160;&#160;&#160;&#160;余额</string>
    <string name="pay_payment">立即付款</string>
    <string name="recharge_alipay">支付宝</string>
    <string name="recharge_wechat">微信</string>
    <string name="recharge_paypal">PayPal</string>
    <string name="recharge_bank">信用卡</string>
    <string name="recharge_price">充值金额</string>
    <string name="recharge_enter_price">请输入金额</string>
    <string name="recharge_sure">确认充值</string>
    <string name="recharge_fastgo">FastGo安全充值</string>
    <string name="safe_change_password">密码修改</string>
    <string name="safe_check_phone">手机验证修改密码</string>
    <string name="safe_change_phone">手机修改</string>
    <string name="safe_check_password">输入密码修改手机号</string>
    <string name="safe_email_not">邮箱未绑定</string>
    <string name="safe_check_code">邮箱验证码绑定邮箱</string>
    <string name="safe_change_email">邮箱修改</string>
    <string name="safe_binding_email">邮箱绑定</string>
    <string name="safe_change_emails">修改邮箱</string>
    <string name="safe_check_code_email">邮箱验证码修改邮箱</string>
    <string name="email_old">原邮箱</string>
    <string name="email_new">新邮箱</string>
    <string name="email_content">点击获取验证码后，我们会向邮箱发送验证码，请注意查收</string>
    <string name="email_sure">确认修改</string>
    <string name="email_email">邮箱</string>
    <string name="email_binding">立即绑定</string>
    <string name="password_new">新密码</string>
    <string name="password_sure">确认新密码</string>
    <string name="password_content">点击获取验证码后，我们会向该手机号发送验证码，请注意查收</string>
    <string name="phone_password">请输入密码</string>
    <string name="phone_new_phone">新手机号</string>
    <string name="service_problem">常见问题</string>
    <string name="service_bill">禁运物品，集运条例</string>
    <string name="service_process">流程简介</string>
    <string name="service_how_to_order">不知道怎么下单，看这里哦</string>
    <string name="service_where">看看你的包裹到哪里了呢</string>
    <string name="service_quotation">运费报价</string>
    <string name="service_shipping_report">查看最新的运费报表</string>
    <string name="service_rate_query">汇率查询</string>
    <string name="service_exchange_rate">了解今日汇率</string>
    <string name="transfer_content">转运包裹先寄到Fastgo中转仓，分别拆包转运哦~收件人仓库地址是Fastgo收录包裹的唯一标识，不可更改！</string>
    <string name="transfer_phone">收件人电话</string>
    <string name="transfer_address">仓库地址</string>
    <string name="beizhu">备注</string>
    <string name="pack_weight">包裹总重量:</string>
    <string name="shop_name">商品名称</string>
    <string name="shop_type">类别</string>
    <string name="shop_pp">品牌</string>
    <string name="shop_guige">规格</string>
    <string name="shop_num">数量</string>
    <string name="shop_prize">单价</string>
    <string name="shop_all">合计</string>
    <string name="shou_people">收件人:</string>
    <string name="shou_address">收货地址:</string>
    <string name="shou_idcard">身份证号码:</string>
    <string name="yun_dan">运单号:</string>
    <string name="zhuan_yun_dan">转运单号:</string>
    <string name="wu">物品:</string>
    <string name="ru_ku">入库:</string>
    <string name="yun_money">运费:</string>
    <string name="suifei_money">税费:</string>
    <string name="wpbj_money">物品保价:</string>
    <string name="bjfy_money">保价费用:</string>
    <string name="yun_dan_beizhu">运单备注:</string>
    <string name="ruku_time">入库时间:</string>
    <string name="create_time">创建时间:</string>
    <string name="pay_time">付款时间:</string>
    <string name="phone_number">手机号:</string>
    <string name="address">地址:</string>
    <string name="email">邮编:</string>
    <string name="qupin_message">物品信息</string>
    <string name="add_wu">添加物品</string>
    <string name="liji_add">立即添加</string>
    <string name="add_user">添加用户</string>
    <string name="liji_save">保存</string>
</resources>