<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/head_layout" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_yun_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/dp_8"
                android:text="@string/yun_dan"
                android:textSize="@dimen/sp_16" />

            <TextView
                android:id="@+id/zhuan_yun_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/zhuan_yun_dan"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_wu_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/wu"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_in_ku"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/ru_ku"
                android:textSize="@dimen/sp_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_yun_price"
                    android:layout_width="@dimen/dp_180"
                    android:layout_height="wrap_content"
                    android:text="@string/yun_money" />

                <TextView
                    android:id="@+id/tv_sui_price"
                    android:layout_width="@dimen/dp_180"
                    android:layout_height="wrap_content"
                    android:text="@string/suifei_money" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_baojia"
                    android:layout_width="@dimen/dp_180"
                    android:layout_height="wrap_content"
                    android:text="@string/wpbj_money" />

                <TextView
                    android:id="@+id/tv_baojia_price"
                    android:layout_width="@dimen/dp_180"
                    android:layout_height="wrap_content"
                    android:text="@string/bjfy_money" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_beizhu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/yun_dan_beizhu"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_in_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/ruku_time"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_create_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/create_time"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_pay_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/pay_time"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:id="@+id/tv_u_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_30"
                android:text="@string/shou_people" />

            <TextView
                android:id="@+id/tv_u_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/phone_number" />

            <TextView
                android:id="@+id/tv_u_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/address" />

            <TextView
                android:id="@+id/tv_u_youbian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/email" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_30"
                android:gravity="center_horizontal"
                android:padding="@dimen/dp_4"
                android:text="@string/qupin_message"
                android:textColor="@android:color/black"
                android:textSize="@dimen/sp_16" />

            <include layout="@layout/index_wu_item" />

            <TextView
                android:id="@+id/tv_all_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_12"
                android:text="@string/pack_weight" />

            <LinearLayout
                android:id="@+id/fa_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/dp_4"
                    android:text="发货拍照"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/sp_16" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/fa_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/fa_beizhu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:text="@string/beizhu"
                    android:textSize="@dimen/sp_14" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>