<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/dp_8">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_wu"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:id="@+id/add_quit"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:src="@drawable/close" />

    </RelativeLayout>

    <EditText
        android:id="@+id/et_add_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@android:color/white"
        android:hint="@string/shop_name"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/sp_14" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/dp_8">

        <TextView
            android:id="@+id/et_add_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:hint="@string/shop_type"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="@dimen/dp_1"
            android:layout_height="@dimen/dp_20"
            android:background="@color/grid_state_focused" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_add_pp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/shop_pp"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/sp_14" />

    <EditText
        android:id="@+id/et_add_guige"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/shop_guige"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/sp_14" />

    <EditText
        android:id="@+id/et_add_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/shop_num"
        android:inputType="number"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/sp_14" />

    <EditText
        android:id="@+id/et_add_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/shop_prize"
        android:inputType="number"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/tv_add_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/shop_all"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/sp_14" />

    <Button
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginTop="@dimen/sp_16"
        android:background="@color/red"
        android:text="@string/liji_add"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16" />


</LinearLayout>