<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_line"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/height_ten"
        android:paddingTop="@dimen/height_ten">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_goods_name"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_type"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_brand"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_format"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_number"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_12" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/order_unit_price"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_12" />


    </LinearLayout>
</LinearLayout>