<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_fourty"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/order_goods_name"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_12" />
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/order_type"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_12" />
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/order_brand"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_12" />
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/order_format"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_12" />
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/order_number"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_12" />
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/order_unit_price"
            android:textColor="@color/main_black"
            android:textSize="@dimen/text_size_12" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_warehouse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"></android.support.v7.widget.RecyclerView>

</LinearLayout>