<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_8">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_user"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_16" />

        <ImageView
            android:id="@+id/add_user_quit"
            android:layout_width="@dimen/dp_16"
            android:layout_height="@dimen/dp_16"
            android:layout_alignParentRight="true"
            android:src="@drawable/close" />

    </RelativeLayout>

    <EditText
        android:id="@+id/et_add_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@android:color/white"
        android:hint="@string/shou_people"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/sp_14" />

    <EditText
        android:id="@+id/et_add_user_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/shou_address"
        android:inputType="number"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/sp_14" />

    <EditText
        android:id="@+id/et_add_user_id_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/shou_idcard"
        android:inputType="number"
        android:padding="@dimen/dp_8"
        android:textSize="@dimen/sp_14" />

    <Button
        android:id="@+id/save_user_info"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginLeft="@dimen/dp_8"
        android:layout_marginRight="@dimen/dp_8"
        android:layout_marginTop="@dimen/sp_16"
        android:background="@color/red"
        android:text="@string/liji_save"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_16" />

</LinearLayout>